tests/snapshots/run_wpt_conformance__trtx_abs_float16_6D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "abs.https.any.js",
    "abs float16 6D tensor",
    "trtx",
    "PASS",
)
